# MDVRP_MHA

./: .bash_history  .gitignore  .viminfo  Dockerfile  README.md  data_cp.py  dataclass.py  docker.sh  git.sh  result.txt  test.sh
Csv/: ga_n20d3c5D1.csv  get_mean.py  mean.py  n100d1c6D3_ga.csv  n100d1c6D3_or.csv  n100d1c6D3_to.csv  n100d1c6D3_to_2opt.csv  n100d3c2D3_ga.csv  n100d3c2D3_or.csv  n100d3c2D3_to.csv  n100d3c2D3_to_2opt.csv  n100d3c3D2_ga.csv  n100d3c3D2_or.csv  n100d3c3D2_to.csv  n100d3c3D2_to_2opt.csv  n100d3c4D2_or.csv  n100d3c4D2_to.csv  n100d3c4D2_to_2opt.csv  n120d1c9D3_ga.csv  n120d1c9D3_or.csv  n120d1c9D3_to.csv  n120d1c9D3_to_2opt.csv  n120d3c3D3_ga.csv  n120d3c3D3_or.csv  n120d3c3D3_to.csv  n120d3c3D3_to_2opt.csv  n20d1c7D1_ga.csv  n20d1c7D1_or.csv  n20d1c7D1_to.csv  n20d1c7D1_to_2opt.csv  n20d3c5D1_ga.csv  n20d3c5D1_or.csv  n20d3c5D1_to.csv  n20d3c5D1_to_2opt.csv  n50d1c6D2_ga.csv  n50d1c6D2_or.csv  n50d1c6D2_to.csv  n50d1c6D2_to_2opt.csv  n50d3c3D2_ga.csv  n50d3c3D2_or.csv  (+8 more)
GA/: classes.py  main.py  trainer.py
GA/Cpp/: CMakeLists.txt  main.cpp  run.sh
GA/Cpp/include/: cluster.hpp  customer.hpp  depot.hpp  filereader.hpp  geneticAlgorithm.hpp  reportGenerator.hpp  route.hpp  types.h
GA/Cpp/src/: CMakeLists.txt  cluster.cpp  customer.cpp  depot.cpp  filereader.cpp  geneticAlgorithm.cpp  reportGenerator.cpp  reportGenerator_copy.cpp  route.cpp
GA/data/: d2n100D2.txt  d2n50D1.txt  d2n50D2.txt  d3c50.txt  d3n50.txt  d3n50D2.txt  n100d1c6D3s1.txt  n100d1c6D3s10.txt  n100d1c6D3s2.txt  n100d1c6D3s3.txt  n100d1c6D3s4.txt  n100d1c6D3s5.txt  n100d1c6D3s6.txt  n100d1c6D3s7.txt  n100d1c6D3s8.txt  n100d1c6D3s9.txt  n100d3c2D3s1.txt  n100d3c2D3s10.txt  (+101 more)
Ortools/: README.md  dataclass.py  mydata.yaml  print.py  solver.cpp  solver.py  visualize.py
Torch/: baseline.py  config.py  dataclass.py  dataset.py  plot.py  run.sh  train.py
(+424 files in other folders)
